force-app/main/default/objects/ARTL_OTP_Utility__c/ARTL_OTP_Utility__c.object-meta.xml
<CustomObject>
    <description>To store OTP information</description>
    <label>ARTL OTP Utility</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ARTL OTP Utilities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>