force-app/main/default/objects/ARTL_OTP_Utility__c/fields/ARTL_Is_Valid__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Is_Valid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Valid</label>
    <type>Checkbox</type>
</CustomField>