force-app/main/default/objects/ARTL_OTP_Utility__c/fields/OTP__c.field-meta.xml
<CustomField>
    <fullName>OTP__c</fullName>
    <description>To store OTP.</description>
    <label>OTP</label>
    <length>4</length>
    <type>Text</type>
</CustomField>