force-app/main/default/objects/ARTL_OTP_Utility__c/fields/TimeStamp__c.field-meta.xml
<CustomField>
    <fullName>TimeStamp__c</fullName>
    <label>TimeStamp</label>
    <type>DateTime</type>
</CustomField>