force-app/main/default/objects/ARTL_OTP_Utility__c/fields/User_For__c.field-meta.xml
<CustomField>
    <fullName>User_For__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User For</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>ARTL OTP Utilities</relationshipLabel>
    <relationshipName>ARTL_OTP_Utilities</relationshipName>
    <type>Lookup</type>
</CustomField>