force-app/main/default/objects/ARTL_OTP_Utility__c/fields/ValidTill__c.field-meta.xml
<CustomField>
    <fullName>ValidTill__c</fullName>
    <label>ValidTill</label>
    <type>DateTime</type>
</CustomField>